Day4/persistent-volume/wordpress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress

  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
        - name: wordpress-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc-jegan  # Replace 'jegan' with your name
        containers:
        - name: wordpress
          image: bitnami/wordpress:latest
          imagePullPolicy: IfNotPresent

          volumeMounts:
          - name: wordpress-storage
            mountPath: /bitnami/wordpress
